--- a/my.header.html
+++ b/my.header.html
@@ -1,14 +1,31 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js" integrity="sha512-7Z9J3l1+EYfeaPKcGXu3MS/7T+w19WtKQY/n+xzmw4hZhJ9tyYmcUS+4QqAlzhicE5LAfMQSF3iFTK9bQdTxXg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js" integrity="sha512-SkmBfuA2hqjzEVpmnMt/LINrjop3GKWqsuLSSB3e7iBmYK7JuWw4ldmmxwD9mdm2IRTTi0OxSAfEGvgEi0i2Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/toolbar/prism-toolbar.min.js" integrity="sha512-st608h+ZqzliahyzEpETxzU0f7z7a9acN6AFvYmHvpFhmcFuKT8a22TT5TpKpjDa3pt3Wv7Z3SdQBCBdDPhyWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="module">
-document.addEventListener("DOMContentLoaded", (event) => {
+  function splitLangAndTitle(dataLang) {
+    if (!dataLang) return [dataLang];
+
+    const index = dataLang.indexOf(":");
+    if (index == -1) return [dataLang];
+
+    return [dataLang.substring(0, index), dataLang.substring(index + 1)];
+  }
+
+  document.addEventListener("DOMContentLoaded", (event) => {
     document.querySelectorAll("pre.code").forEach((pre) => {
-        const code = document.createElement('code');
-        code.textContent = pre.textContent;
-        code.className = `code language-${pre.getAttribute('data-lang')}`;
-        pre.innerText = '';
-        pre.appendChild(code);
-        window.Prism.highlightElement(pre);
+      const [lang, title] = splitLangAndTitle(pre.getAttribute("data-lang"));
+
+      const code = document.createElement("code");
+      code.textContent = pre.textContent;
+      code.className = `code language-${lang}`;
+
+      pre.innerText = "";
+      if (title) {
+        pre.dataset.label = title;
+      }
+      pre.appendChild(code);
+
+      window.Prism.highlightElement(code);
     });
-});
+  });
 </script>
