--- a/my.header.html
+++ b/my.header.html
@@ -2,7 +2,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js" integrity="sha512-SkmBfuA2hqjzEVpmnMt/LINrjop3GKWqsuLSSB3e7iBmYK7JuWw4ldmmxwD9mdm2IRTTi0OxSAfEGvgEi0i2Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/toolbar/prism-toolbar.min.js" integrity="sha512-st608h+ZqzliahyzEpETxzU0f7z7a9acN6AFvYmHvpFhmcFuKT8a22TT5TpKpjDa3pt3Wv7Z3SdQBCBdDPhyWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="module">
-  function splitLangAndTitle(dataLang) {
+  function splitLangAndLabel(dataLang) {
     if (!dataLang) return [dataLang];
 
     const index = dataLang.indexOf(":");
@@ -13,15 +13,15 @@
 
   document.addEventListener("DOMContentLoaded", (event) => {
     document.querySelectorAll("pre.code").forEach((pre) => {
-      const [lang, title] = splitLangAndTitle(pre.dataset.lang);
+      const [lang, label] = splitLangAndLabel(pre.dataset.lang);
 
       const code = document.createElement("code");
       code.textContent = pre.textContent;
       code.className = `code language-${lang}`;
 
       pre.innerText = "";
-      if (title) {
-        pre.dataset.label = title;
+      if (label) {
+        pre.dataset.label = label;
       }
       pre.appendChild(code);
 
